Working version of App

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".CatalogActivity" />
         </activity>
+        <provider
+            android:name=".data.ItemProvider"
+            android:authorities="com.larry.osakwe.caniborrow"
+            android:exported="false" />
     </application>
 
 </manifest>
